# pyclass

./: LICENSE  game.py  pyproject.toml
pygame1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
